# orus-lang

./: .gitignore  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COMPILATION_SIMPLIFICATION_PLAN.md  COMPILER_FEATURE_SEPARATION.md  COMPILER_FIX_PLAN.md  COMPILER_REFACTOR_PLAN.md  COMPILER_VM_ROADMAP.md  Compiler Instance Aliasing.md  ERROR_ORGANIZATION_PROPOSAL.md  ERROR_REORGANIZATION_SUMMARY.md  JIT_BENCHMARK_RESULTS.md  JIT_FULL_ROADMAP.md  JIT_PHASE4_BASELINE_PLAN.md  LICENSE  LOOP_OPTIMIZATION_RESULTS.md  MAKEFILE_INTEGRATION_SUMMARY.md  MISSING.md  MODULAR_COMPILER_DESIGN.md  ORUS_VM_SCIENTIFIC_ANALYSIS.md  Orus_VM_Paper.md  PHASE1_READY.md  README.md  REORGANIZATION_SUMMARY.md  TAIL_CALL_OPTIMIZATION_SUMMARY.md  TEST_FAILURE_ANALYSIS.md  TEST_REPORT.md  TODO.md  UNARY_OPERATORS_SUMMARY.md  VM_REORGANIZATION_SUMMARY.md  ast.c  ast.h  benchmark_complex.json  benchmark_complex.py  build.py  build.zig  common.h  comp.md  (+295 more)
.claude/: settings.local.json
.github/: pull_request_template.md
benchmark_results/: arithmetic_benchmark_20250629_180902.json  arithmetic_benchmark_20250629_180944.json  benchmark_20250629_180428.json
benchmarks/: .orus_history  README.md  advanced_benchmark.py  loop_sum_benchmark.js  orus_vs_js_benchmark.py  orus_vs_lua_benchmark.py  quick_bench.sh  run_benchmarks.sh  run_loop_sum_benchmark.sh  show_commands.sh  simple_benchmark.py  simple_benchmark.sh  test_50_ops.orus  test_cleanup.json  validate_setup.sh
docs/: ADDING_NEW_TYPE_SUPPORT.md  AGENTS.md  ALGORITHM_STRESS_TEST_ROADMAP.md  API_DOCUMENTATION.md  COLD_START_FIX.md  (+61 more)
(+1102 files in other folders)
